# jrl

./: .gitmodules  CMakeLists.txt  LIBRARY.md  README.md  VALUE_FORMATS.md
cmake/: Config.cmake.in  HandleUninstall.cmake  MakeConfigFile.cmake  cmake_uninstall.cmake.in  setup.py.in
format/: DATASET_FORMAT.md  MEASUREMENT_FORMAT.md  METRIC_FORMAT.md  RESULT_FORMATS.md  RESULT_FPRMATS.md  VALUE_FORMAT.md
include/jrl/: Alignment-inl.h  Alignment.h  Dataset-inl.h  Dataset.h  DatasetBuilder.h  IOMeasurements.h  IOValues.h  Initialization-inl.h  Initialization.h  MeasurementParserFunctions.h  Metrics-inl.h  Metrics.h  Parser-inl.h  Parser.h  Results.h  Types.h  Utilities-inl.h  Utilities.h  ValueParserFunctions.h  Writer.h
python/: CMakeLists.txt  bindings.cpp  typecasters.h
src/: Dataset.cpp  DatasetBuilder.cpp  IOMeasurements.cpp  IOValues.cpp  Initialization.cpp  Metrics.cpp  Parser.cpp  Results.cpp  Types.cpp  Writer.cpp  main.cpp
tests/: CMakeLists.txt  test_CombinedIMUFactor.cpp  test_Custom.cpp  test_IMUBias.cpp  test_StereoFactor.cpp  test_Types.cpp  test_initialization.cpp
